Fixed css on navabar and projects
Made navbar more responsive by adding span tag around text and hiding that when screen is too small. Moved links inside list tags and aligned them.  Removed red border from project items

--- a/src/css/navbar.sass
+++ b/src/css/navbar.sass
@@ -1,47 +1,60 @@
 @use './vars.sass' as *
 
 .nav
-  @media screen and ( min-width: 769px )
-      display: block
-  width : 100%
-  height : 50px
-  position : fixed
-  z-index : 1
-  display: none
+	display: block
+	width: 100%
+	height: 50px
+	position: fixed
+	z-index: 1
 ul
-  height : 100%
-  list-style : none
-  margin : 0
-  padding : 0
-  li
-    @media screen and ( min-width: 769px )
-      display : inline-block
-      position : relative
-      width : 20%
-      margin : 0 0
-      text-align : center
-      line-height : 2.61em
-      font-size : 1.2em
-      svg
-        margin-right : 5px
+	height: 50px
+	list-style: none
+	margin: 0
+	padding: 0
+	li
+		height: 50px
+		width: 20%
+		display: inline-block
+		line-height: 50px
+		position: relative
+		a
+			display: block
+			margin: 0 0
+			text-align: center
+			font-size: 1.2em
+			height: 50px
+			text-decoration: none
+			color: inherit
+			position: absolute
+			top: 50%
+			left: 50%
+			transform: translate(-50%,-50%)
+			svg
+				margin-right: 5px
+			span
+				display: none
+				@media screen and ( min-width: 1010px )
+					display: inline
+					
 .btn-switch
-  height : calc(2.61em - 6px)
-  width : calc(5.5em - 6px)
-  border-radius : 15px
-  padding : 0
-  transition : background-color 0.35s ease-in-out
-  position : absolute
-  top : calc((2.61em - 6px)/2)
-  left : calc(5.5em - 6px)
-  margin-top : -2.61em
-  margin-left : -5.5em
-  .btn-slider
-    height : 100%
-    width : 50%
-    background : radial-gradient(#FFF 30%, #AAA 40%, #000 75%)
-    transition : transform 0.35s ease-in-out
-    display : block
-    margin : 0
-    padding : 0
-    border-radius : 15px
-    overflow : hidden
+	@media screen and ( max-width: 300px )
+		display: none		
+	height: 32.2px
+	width: 74.6px
+	border-radius: 15px
+	padding: 0
+	transition: background-color 0.35s ease-in-out
+	position: absolute
+	top: 50%
+	left: 50%
+	transform: translate(-50%,-50%)
+	.btn-slider
+		height: 100%
+		width: 50%
+		background: radial-gradient(#FFF 30%, #AAA 40%, #000 75%)
+		transition: transform 0.35s ease-in-out
+		display: block
+		margin: 0
+		padding: 0
+		border-radius: 15px
+		overflow: hidden
