--- a/src/css/projects.sass
+++ b/src/css/projects.sass
@@ -27,7 +27,6 @@ h1
 	height: 100% !important
 	text-decoration: none
 	color: inherit
-	border: 1px solid red
 /* img should be 360px wide maximum */
 img
 	object-fit: cover
